--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "date-fns": "^4.1.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-simple-calendar": "^0.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.6.0",
